minor corrections; unit test for bfgs algorithm complete

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -896,60 +896,61 @@ m4trace:configure.ac:32: -1- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
 ../../lib/autoconf/general.m4:1481: AC_ARG_WITH is expanded from...
 configure.ac:32: the top level])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXXFLAGS$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^ac_ct_CXX$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^EXEEXT$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:44: -1- _AM_DEPENDENCIES([CXX])
-m4trace:configure.ac:44: -1- AM_SET_DEPDIR
-m4trace:configure.ac:44: -1- m4_pattern_allow([^DEPDIR$])
-m4trace:configure.ac:44: -1- AM_OUTPUT_DEPENDENCY_COMMANDS
-m4trace:configure.ac:44: -1- AM_MAKE_INCLUDE
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__quote$])
-m4trace:configure.ac:44: -1- AM_DEP_TRACK
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEP_TRUE$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEP_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__nodep$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__nodep])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXXDEPMODE$])
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([am__fastdepCXX], [
+m4trace:configure.ac:37: -1- m4_pattern_allow([^_DEBUG_$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXXFLAGS$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^ac_ct_CXX$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^EXEEXT$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:46: -1- _AM_DEPENDENCIES([CXX])
+m4trace:configure.ac:46: -1- AM_SET_DEPDIR
+m4trace:configure.ac:46: -1- m4_pattern_allow([^DEPDIR$])
+m4trace:configure.ac:46: -1- AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:46: -1- AM_MAKE_INCLUDE
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__quote$])
+m4trace:configure.ac:46: -1- AM_DEP_TRACK
+m4trace:configure.ac:46: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEP_TRUE$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEP_FALSE$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__nodep$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__nodep])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXXDEPMODE$])
+m4trace:configure.ac:46: -1- AM_CONDITIONAL([am__fastdepCXX], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FC$])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FCFLAGS$])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FC$])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^ac_ct_FC$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS_HPP$])
-m4trace:configure.ac:66: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FC$])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FCFLAGS$])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FC$])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^ac_ct_FC$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS_HPP$])
+m4trace:configure.ac:68: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:66: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:66: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:66: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:66: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.ac:68: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:68: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:68: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:68: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:68: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
