--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -263,158 +263,160 @@ m4trace:configure.ac:32: -1- _m4_warn([obsolete], [The macro `AC_HELP_STRING' is
 You should run autoupdate.], [../../lib/autoconf/general.m4:207: AC_HELP_STRING is expanded from...
 ../../lib/autoconf/general.m4:1481: AC_ARG_WITH is expanded from...
 configure.ac:32: the top level])
-m4trace:configure.ac:44: -1- AC_SUBST([CXX])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:44: -1- AC_SUBST([CXXFLAGS])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([CXXFLAGS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXXFLAGS$])
-m4trace:configure.ac:44: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([LDFLAGS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:44: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([LIBS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:44: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:44: -1- AC_SUBST([CXX])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:44: -1- AC_SUBST([ac_ct_CXX])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([ac_ct_CXX])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^ac_ct_CXX$])
-m4trace:configure.ac:44: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([EXEEXT])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^EXEEXT$])
-m4trace:configure.ac:44: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([OBJEXT])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:44: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([DEPDIR])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^DEPDIR$])
-m4trace:configure.ac:44: -1- AC_SUBST([am__include])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__include])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:44: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__quote$])
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.ac:44: -1- AC_SUBST([AMDEP_TRUE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AMDEP_TRUE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEP_TRUE$])
-m4trace:configure.ac:44: -1- AC_SUBST([AMDEP_FALSE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AMDEP_FALSE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEP_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
-m4trace:configure.ac:44: -1- AC_SUBST([AMDEPBACKSLASH])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:44: -1- AC_SUBST([am__nodep])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__nodep])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__nodep$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__nodep])
-m4trace:configure.ac:44: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([CXXDEPMODE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^CXXDEPMODE$])
-m4trace:configure.ac:44: -1- AM_CONDITIONAL([am__fastdepCXX], [
+m4trace:configure.ac:37: -1- AC_DEFINE_TRACE_LITERAL([_DEBUG_])
+m4trace:configure.ac:37: -1- m4_pattern_allow([^_DEBUG_$])
+m4trace:configure.ac:46: -1- AC_SUBST([CXX])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:46: -1- AC_SUBST([CXXFLAGS])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([CXXFLAGS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXXFLAGS$])
+m4trace:configure.ac:46: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:46: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:46: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:46: -1- AC_SUBST([CXX])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:46: -1- AC_SUBST([ac_ct_CXX])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([ac_ct_CXX])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^ac_ct_CXX$])
+m4trace:configure.ac:46: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([EXEEXT])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^EXEEXT$])
+m4trace:configure.ac:46: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([OBJEXT])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:46: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([DEPDIR])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^DEPDIR$])
+m4trace:configure.ac:46: -1- AC_SUBST([am__include])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__include])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:46: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__quote])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__quote$])
+m4trace:configure.ac:46: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:46: -1- AC_SUBST([AMDEP_TRUE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([AMDEP_TRUE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEP_TRUE$])
+m4trace:configure.ac:46: -1- AC_SUBST([AMDEP_FALSE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([AMDEP_FALSE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEP_FALSE$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
+m4trace:configure.ac:46: -1- AC_SUBST([AMDEPBACKSLASH])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
+m4trace:configure.ac:46: -1- AC_SUBST([am__nodep])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__nodep])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__nodep$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__nodep])
+m4trace:configure.ac:46: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([CXXDEPMODE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^CXXDEPMODE$])
+m4trace:configure.ac:46: -1- AM_CONDITIONAL([am__fastdepCXX], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:44: -1- AC_SUBST([am__fastdepCXX_TRUE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
-m4trace:configure.ac:44: -1- AC_SUBST([am__fastdepCXX_FALSE])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:49: -1- AC_SUBST([FC])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([FC])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FC$])
-m4trace:configure.ac:49: -1- AC_SUBST([FCFLAGS])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([FCFLAGS])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FCFLAGS$])
-m4trace:configure.ac:49: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([LDFLAGS])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:49: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([LIBS])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:49: -1- AC_SUBST([FC])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([FC])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^FC$])
-m4trace:configure.ac:49: -1- AC_SUBST([ac_ct_FC])
-m4trace:configure.ac:49: -1- AC_SUBST_TRACE([ac_ct_FC])
-m4trace:configure.ac:49: -1- m4_pattern_allow([^ac_ct_FC$])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS_HPP], [/* Define to 1 if you have the <boost/program_options.hpp> header file. */
+m4trace:configure.ac:46: -1- AC_SUBST([am__fastdepCXX_TRUE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
+m4trace:configure.ac:46: -1- AC_SUBST([am__fastdepCXX_FALSE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:51: -1- AC_SUBST([FC])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([FC])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FC$])
+m4trace:configure.ac:51: -1- AC_SUBST([FCFLAGS])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([FCFLAGS])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FCFLAGS$])
+m4trace:configure.ac:51: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:51: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:51: -1- AC_SUBST([FC])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([FC])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^FC$])
+m4trace:configure.ac:51: -1- AC_SUBST([ac_ct_FC])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([ac_ct_FC])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^ac_ct_FC$])
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS_HPP], [/* Define to 1 if you have the <boost/program_options.hpp> header file. */
 @%:@undef HAVE_BOOST_PROGRAM_OPTIONS_HPP])
-m4trace:configure.ac:57: -1- AC_SUBST([CXXCPP])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([CXXCPP])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:57: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:57: -1- AC_SUBST([CXXCPP])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([CXXCPP])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^CXXCPP$])
-m4trace:configure.ac:57: -1- AC_SUBST([GREP])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:57: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^EGREP$])
-m4trace:configure.ac:57: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^STDC_HEADERS$])
-m4trace:configure.ac:57: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
+m4trace:configure.ac:59: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:59: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:59: -1- AC_SUBST([CXXCPP])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([CXXCPP])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^CXXCPP$])
+m4trace:configure.ac:59: -1- AC_SUBST([GREP])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([GREP])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^GREP$])
+m4trace:configure.ac:59: -1- AC_SUBST([EGREP])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([EGREP])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^EGREP$])
+m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^STDC_HEADERS$])
+m4trace:configure.ac:59: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
 @%:@undef STDC_HEADERS])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
 @%:@undef HAVE_SYS_TYPES_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
 @%:@undef HAVE_SYS_STAT_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
 @%:@undef HAVE_STDLIB_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
 @%:@undef HAVE_STRING_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
 @%:@undef HAVE_MEMORY_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
 @%:@undef HAVE_STRINGS_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
 @%:@undef HAVE_INTTYPES_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
 @%:@undef HAVE_STDINT_H])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
-m4trace:configure.ac:57: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS_HPP])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS_HPP$])
-m4trace:configure.ac:66: -1- AC_CONFIG_FILES([Makefile src/Makefile])
-m4trace:configure.ac:66: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS_HPP])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS_HPP$])
+m4trace:configure.ac:68: -1- AC_CONFIG_FILES([Makefile src/Makefile])
+m4trace:configure.ac:68: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:66: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:66: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:66: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:66: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:66: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:66: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:66: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:68: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:68: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:68: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:68: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:68: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:68: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:68: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:68: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:68: -1- AC_SUBST_TRACE([MKDIR_P])
