--- a/src/neural_network/.deps/single_layer_perceptron.Po
+++ b/src/neural_network/.deps/single_layer_perceptron.Po
@@ -146,12 +146,15 @@ neural_network/single_layer_perceptron.o: \
  neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
  neural_network/../utilities/linear_algebra/dense_vector.hpp \
  neural_network/../utilities/linear_algebra/blas.hpp \
+ neural_network/../utilities/linear_algebra/../general/debug.hpp \
+ /usr/include/c++/4.8/bitset \
  neural_network/../utilities/linear_algebra/dense_vector.hpp \
  neural_network/../utilities/optimization/bfgs.hpp \
  neural_network/../utilities/optimization/../general/dvec_def.hpp \
  neural_network/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
  neural_network/../utilities/optimization/../linear_algebra/dense_vector.hpp \
  neural_network/../utilities/optimization/line_search.hpp \
+ neural_network/../utilities/optimization/../general/debug.hpp \
  neural_network/../utilities/general/dvec_def.hpp
 
 /usr/include/stdc-predef.h:
@@ -524,6 +527,10 @@ neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
 neural_network/../utilities/linear_algebra/blas.hpp:
 
+neural_network/../utilities/linear_algebra/../general/debug.hpp:
+
+/usr/include/c++/4.8/bitset:
+
 neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
 neural_network/../utilities/optimization/bfgs.hpp:
@@ -535,5 +542,7 @@ neural_network/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
 neural_network/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 neural_network/../utilities/optimization/line_search.hpp:
+
+neural_network/../utilities/optimization/../general/debug.hpp:
 
 neural_network/../utilities/general/dvec_def.hpp:
