--- a/src/neural_network/.deps/single_layer_perceptron.Po
+++ b/src/neural_network/.deps/single_layer_perceptron.Po
@@ -107,16 +107,19 @@ neural_network/single_layer_perceptron.o: \
  /usr/include/c++/4.8/utility /usr/include/c++/4.8/bits/stl_relops.h \
  /usr/include/c++/4.8/array /usr/include/c++/4.8/stdexcept \
  /usr/include/c++/4.8/bits/uses_allocator.h \
- /usr/include/c++/4.8/algorithm /usr/include/c++/4.8/bits/stl_algo.h \
- /usr/include/c++/4.8/bits/algorithmfwd.h \
- /usr/include/c++/4.8/bits/stl_heap.h \
- /usr/include/c++/4.8/bits/stl_tempbuf.h \
- /usr/include/c++/4.8/bits/stl_construct.h \
+ neural_network/../utilities/linear_algebra/dense_matrix.hpp \
+ neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
+ /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
  /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/alloc_traits.h \
- /usr/include/c++/4.8/bits/ptr_traits.h /usr/include/c++/4.8/random \
- /usr/include/c++/4.8/cmath /usr/include/math.h \
- /usr/include/x86_64-linux-gnu/bits/huge_val.h \
+ /usr/include/c++/4.8/bits/ptr_traits.h \
+ /usr/include/c++/4.8/bits/stl_uninitialized.h \
+ /usr/include/c++/4.8/bits/stl_vector.h \
+ /usr/include/c++/4.8/bits/stl_bvector.h \
+ /usr/include/c++/4.8/bits/vector.tcc \
+ neural_network/../utilities/linear_algebra/dense_vector.hpp \
+ /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
+ /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
  /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
  /usr/include/x86_64-linux-gnu/bits/inf.h \
@@ -125,11 +128,6 @@ neural_network/single_layer_perceptron.o: \
  /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
  /usr/include/x86_64-linux-gnu/bits/mathinline.h \
  /usr/include/c++/4.8/limits /usr/include/c++/4.8/bits/random.h \
- /usr/include/c++/4.8/vector \
- /usr/include/c++/4.8/bits/stl_uninitialized.h \
- /usr/include/c++/4.8/bits/stl_vector.h \
- /usr/include/c++/4.8/bits/stl_bvector.h \
- /usr/include/c++/4.8/bits/vector.tcc \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
@@ -142,19 +140,13 @@ neural_network/single_layer_perceptron.o: \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- neural_network/../utilities/linear_algebra/dense_matrix.hpp \
- neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
- neural_network/../utilities/linear_algebra/dense_vector.hpp \
  neural_network/../utilities/linear_algebra/blas.hpp \
- neural_network/../utilities/linear_algebra/../general/debug.hpp \
- /usr/include/c++/4.8/bitset \
  neural_network/../utilities/linear_algebra/dense_vector.hpp \
  neural_network/../utilities/optimization/bfgs.hpp \
  neural_network/../utilities/optimization/../general/dvec_def.hpp \
  neural_network/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
  neural_network/../utilities/optimization/../linear_algebra/dense_vector.hpp \
  neural_network/../utilities/optimization/line_search.hpp \
- neural_network/../utilities/optimization/../general/debug.hpp \
  neural_network/../utilities/general/dvec_def.hpp
 
 /usr/include/stdc-predef.h:
@@ -439,15 +431,11 @@ neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/uses_allocator.h:
 
-/usr/include/c++/4.8/algorithm:
+neural_network/../utilities/linear_algebra/dense_matrix.hpp:
 
-/usr/include/c++/4.8/bits/stl_algo.h:
+neural_network/../utilities/linear_algebra/../general/dvec_def.hpp:
 
-/usr/include/c++/4.8/bits/algorithmfwd.h:
-
-/usr/include/c++/4.8/bits/stl_heap.h:
-
-/usr/include/c++/4.8/bits/stl_tempbuf.h:
+/usr/include/c++/4.8/vector:
 
 /usr/include/c++/4.8/bits/stl_construct.h:
 
@@ -456,6 +444,16 @@ neural_network/single_layer_perceptron.hpp:
 /usr/include/c++/4.8/bits/alloc_traits.h:
 
 /usr/include/c++/4.8/bits/ptr_traits.h:
+
+/usr/include/c++/4.8/bits/stl_uninitialized.h:
+
+/usr/include/c++/4.8/bits/stl_vector.h:
+
+/usr/include/c++/4.8/bits/stl_bvector.h:
+
+/usr/include/c++/4.8/bits/vector.tcc:
+
+neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
 
@@ -483,16 +481,6 @@ neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/random.h:
 
-/usr/include/c++/4.8/vector:
-
-/usr/include/c++/4.8/bits/stl_uninitialized.h:
-
-/usr/include/c++/4.8/bits/stl_vector.h:
-
-/usr/include/c++/4.8/bits/stl_bvector.h:
-
-/usr/include/c++/4.8/bits/vector.tcc:
-
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h:
 
 /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h:
@@ -519,17 +507,7 @@ neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
-neural_network/../utilities/linear_algebra/dense_matrix.hpp:
-
-neural_network/../utilities/linear_algebra/../general/dvec_def.hpp:
-
-neural_network/../utilities/linear_algebra/dense_vector.hpp:
-
 neural_network/../utilities/linear_algebra/blas.hpp:
-
-neural_network/../utilities/linear_algebra/../general/debug.hpp:
-
-/usr/include/c++/4.8/bitset:
 
 neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
@@ -542,7 +520,5 @@ neural_network/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
 neural_network/../utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 neural_network/../utilities/optimization/line_search.hpp:
-
-neural_network/../utilities/optimization/../general/debug.hpp:
 
 neural_network/../utilities/general/dvec_def.hpp:
