--- a/src/test/.deps/single_layer_perceptron_test.Po
+++ b/src/test/.deps/single_layer_perceptron_test.Po
@@ -108,16 +108,19 @@ test/single_layer_perceptron_test.o: \
  /usr/include/c++/4.8/utility /usr/include/c++/4.8/bits/stl_relops.h \
  /usr/include/c++/4.8/array /usr/include/c++/4.8/stdexcept \
  /usr/include/c++/4.8/bits/uses_allocator.h \
- /usr/include/c++/4.8/algorithm /usr/include/c++/4.8/bits/stl_algo.h \
- /usr/include/c++/4.8/bits/algorithmfwd.h \
- /usr/include/c++/4.8/bits/stl_heap.h \
- /usr/include/c++/4.8/bits/stl_tempbuf.h \
- /usr/include/c++/4.8/bits/stl_construct.h \
+ test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp \
+ test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
+ /usr/include/c++/4.8/vector /usr/include/c++/4.8/bits/stl_construct.h \
  /usr/include/c++/4.8/ext/alloc_traits.h \
  /usr/include/c++/4.8/bits/alloc_traits.h \
- /usr/include/c++/4.8/bits/ptr_traits.h /usr/include/c++/4.8/random \
- /usr/include/c++/4.8/cmath /usr/include/math.h \
- /usr/include/x86_64-linux-gnu/bits/huge_val.h \
+ /usr/include/c++/4.8/bits/ptr_traits.h \
+ /usr/include/c++/4.8/bits/stl_uninitialized.h \
+ /usr/include/c++/4.8/bits/stl_vector.h \
+ /usr/include/c++/4.8/bits/stl_bvector.h \
+ /usr/include/c++/4.8/bits/vector.tcc \
+ test/../neural_network/../utilities/linear_algebra/dense_vector.hpp \
+ /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
+ /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
  /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
  /usr/include/x86_64-linux-gnu/bits/inf.h \
@@ -126,11 +129,6 @@ test/single_layer_perceptron_test.o: \
  /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
  /usr/include/x86_64-linux-gnu/bits/mathinline.h \
  /usr/include/c++/4.8/limits /usr/include/c++/4.8/bits/random.h \
- /usr/include/c++/4.8/vector \
- /usr/include/c++/4.8/bits/stl_uninitialized.h \
- /usr/include/c++/4.8/bits/stl_vector.h \
- /usr/include/c++/4.8/bits/stl_bvector.h \
- /usr/include/c++/4.8/bits/vector.tcc \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
@@ -143,22 +141,31 @@ test/single_layer_perceptron_test.o: \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
  /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
  /usr/include/c++/4.8/bits/stl_numeric.h \
- test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp \
- test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
- test/../neural_network/../utilities/linear_algebra/dense_vector.hpp \
  test/../neural_network/../utilities/linear_algebra/blas.hpp \
- test/../neural_network/../utilities/linear_algebra/../general/debug.hpp \
- /usr/include/c++/4.8/bitset \
  test/../neural_network/../utilities/linear_algebra/dense_vector.hpp \
  test/../neural_network/../utilities/optimization/bfgs.hpp \
  test/../neural_network/../utilities/optimization/../general/dvec_def.hpp \
  test/../neural_network/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
  test/../neural_network/../utilities/optimization/../linear_algebra/dense_vector.hpp \
  test/../neural_network/../utilities/optimization/line_search.hpp \
- test/../neural_network/../utilities/optimization/../general/debug.hpp \
  test/../neural_network/../utilities/general/dvec_def.hpp \
  test/../utilities/general/dvec_def.hpp \
- test/../utilities/linear_algebra/dense_matrix.hpp
+ test/../utilities/linear_algebra/dense_matrix.hpp \
+ test/../utilities/wrappers/io_wrapper.hpp /usr/include/c++/4.8/fstream \
+ /usr/include/c++/4.8/bits/codecvt.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
+ /usr/include/c++/4.8/bits/fstream.tcc /usr/include/c++/4.8/iomanip \
+ /usr/include/c++/4.8/locale \
+ /usr/include/c++/4.8/bits/locale_facets_nonio.h \
+ /usr/include/c++/4.8/ctime \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
+ /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ test/../utilities/wrappers/../general/template_tools.hpp \
+ test/../utilities/wrappers/../general/dcmplx_type_def.hpp \
+ /usr/include/c++/4.8/complex /usr/include/c++/4.8/sstream \
+ /usr/include/c++/4.8/bits/sstream.tcc
 
 /usr/include/stdc-predef.h:
 
@@ -442,15 +449,11 @@ test/../neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/uses_allocator.h:
 
-/usr/include/c++/4.8/algorithm:
+test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp:
 
-/usr/include/c++/4.8/bits/stl_algo.h:
+test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp:
 
-/usr/include/c++/4.8/bits/algorithmfwd.h:
-
-/usr/include/c++/4.8/bits/stl_heap.h:
-
-/usr/include/c++/4.8/bits/stl_tempbuf.h:
+/usr/include/c++/4.8/vector:
 
 /usr/include/c++/4.8/bits/stl_construct.h:
 
@@ -459,6 +462,16 @@ test/../neural_network/single_layer_perceptron.hpp:
 /usr/include/c++/4.8/bits/alloc_traits.h:
 
 /usr/include/c++/4.8/bits/ptr_traits.h:
+
+/usr/include/c++/4.8/bits/stl_uninitialized.h:
+
+/usr/include/c++/4.8/bits/stl_vector.h:
+
+/usr/include/c++/4.8/bits/stl_bvector.h:
+
+/usr/include/c++/4.8/bits/vector.tcc:
+
+test/../neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
 
@@ -486,16 +499,6 @@ test/../neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/random.h:
 
-/usr/include/c++/4.8/vector:
-
-/usr/include/c++/4.8/bits/stl_uninitialized.h:
-
-/usr/include/c++/4.8/bits/stl_vector.h:
-
-/usr/include/c++/4.8/bits/stl_bvector.h:
-
-/usr/include/c++/4.8/bits/vector.tcc:
-
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h:
 
 /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h:
@@ -522,17 +525,7 @@ test/../neural_network/single_layer_perceptron.hpp:
 
 /usr/include/c++/4.8/bits/stl_numeric.h:
 
-test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp:
-
-test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp:
-
-test/../neural_network/../utilities/linear_algebra/dense_vector.hpp:
-
 test/../neural_network/../utilities/linear_algebra/blas.hpp:
-
-test/../neural_network/../utilities/linear_algebra/../general/debug.hpp:
-
-/usr/include/c++/4.8/bitset:
 
 test/../neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
@@ -546,10 +539,46 @@ test/../neural_network/../utilities/optimization/../linear_algebra/dense_vector.
 
 test/../neural_network/../utilities/optimization/line_search.hpp:
 
-test/../neural_network/../utilities/optimization/../general/debug.hpp:
-
 test/../neural_network/../utilities/general/dvec_def.hpp:
 
 test/../utilities/general/dvec_def.hpp:
 
 test/../utilities/linear_algebra/dense_matrix.hpp:
+
+test/../utilities/wrappers/io_wrapper.hpp:
+
+/usr/include/c++/4.8/fstream:
+
+/usr/include/c++/4.8/bits/codecvt.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
+
+/usr/include/c++/4.8/bits/fstream.tcc:
+
+/usr/include/c++/4.8/iomanip:
+
+/usr/include/c++/4.8/locale:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.h:
+
+/usr/include/c++/4.8/ctime:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h:
+
+/usr/include/libintl.h:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
+
+test/../utilities/wrappers/../general/template_tools.hpp:
+
+test/../utilities/wrappers/../general/dcmplx_type_def.hpp:
+
+/usr/include/c++/4.8/complex:
+
+/usr/include/c++/4.8/sstream:
+
+/usr/include/c++/4.8/bits/sstream.tcc:
